[tool.poetry]
package-mode = false
name = "docs"
version = "0.1.0"
description = ""
authors = ["aidanCQ <aidan.keay@quantinuum.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.3.7"
sphinx-copybutton = "^0.5.2"
ipykernel = "^6.29.4"
enum-tools = { extras = ["sphinx"], version = "^0.12.0" }
furo = "^2024.5.6"
myst-nb = "^1.1.2"
sphinxcontrib-googleanalytics = "^0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
